@@ -1,3 +1,11 @@
+
+2005-10-23 chrisaga
+
+	* bug fixed: cat-list.tpl validate now
+
+	* improvement: removed some unnecessary css rules from old tests in 
+	FROM  design in file default-layout.css
+
 2005-10-23 Pierrick LE GALL
 
 	* bug 181 fixed: "Parameters not created in phpwebgallery_config
